avcodec: avoid division by zero

Setting align to 0 to get default behaviour only works as of
libavutil 51.27.2 (libav) and 51.46.100 (ffmpeg)
See libav commit 0109a09dc3850eb5dbff84a7bb50eb252a5a8f22
Fixes #8508.

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>